[package]
name = "tokio-centrifuge"
version = "0.1.0"
edition = "2021"

[[example]]
name = "pubsub"
path = "examples/pubsub.rs"
required-features = ["examples"]

[[example]]
name = "server"
path = "examples/server.rs"
required-features = ["examples"]

[dependencies]
anyhow = "1.0.93"
async-std = { version = "1.13.0", optional = true }
futures = "0.3.31"
log = "0.4.22"
matchit = "0.8.0"
prost = "0.13.3"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
simple_logger = { version = "5.0.0", optional = true }
slotmap = "1.0.7"
thiserror = "1.0.69"
tokio = { version = "1.41.1", features = ["macros", "rt", "sync", "time"] }
tokio-tungstenite = "0.26.1"
uuid = { version = "1.11.0", features = ["v4"] }

[features]
default = ["native-tls", "examples"]
examples = ["tokio/full", "native-tls", "dep:simple_logger", "dep:async-std"]
native-tls = ["tokio-tungstenite/native-tls"]
rustls = ["tokio-tungstenite/rustls"]
