[package]
name = "tokio-centrifuge"
description = "Unofficial Rust Client SDK for Centrifugo."
version = "0.2.2"
license = "MIT"
edition = "2024"
rust-version = "1.85.0"

[[example]]
name = "pubsub"
path = "examples/pubsub.rs"
required-features = ["examples"]

[[example]]
name = "server"
path = "examples/server.rs"
required-features = ["examples"]

[dependencies]
anyhow = "1.0.98"
async-std = { version = "1.13.0", optional = true }
futures = "0.3.31"
log = "0.4.22"
matchit = "0.8.0"
prost = "0.14.1"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
slotmap = "1.0.7"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["macros", "rt", "sync", "time"] }
tokio-tungstenite = "0.27.0"
tracing-subscriber = { version = "0.3.19", optional = true }
uuid = { version = "1.17.0", features = ["v4"] }

[dev-dependencies]
async-stream = "0.3.0"

[features]
default = ["native-tls", "examples"]
examples = ["tokio/full", "native-tls", "dep:async-std", "dep:tracing-subscriber"]
native-tls = ["tokio-tungstenite/native-tls"]
rustls-tls-native-roots = ["tokio-tungstenite/rustls-tls-native-roots"]
rustls-tls-webpki-roots = ["tokio-tungstenite/rustls-tls-webpki-roots"]

[lints.clippy]
uninlined_format_args = "allow"
